WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118756
Naming convention on createInvalidParamError is incorrect.
https://bugs.webkit.org/show_bug.cgi?id=118756
Summary
Naming convention on createInvalidParamError is incorrect.
Chris Curtis
Reported
2013-07-16 16:48:58 PDT
Naming convention on createInvalidParamError is incorrect.
Attachments
Naming convention fix.
(6.26 KB, patch)
2013-07-16 16:53 PDT
,
Chris Curtis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Curtis
Comment 1
2013-07-16 16:53:36 PDT
Created
attachment 206828
[details]
Naming convention fix.
Geoffrey Garen
Comment 2
2013-07-17 09:02:45 PDT
Comment on
attachment 206828
[details]
Naming convention fix. r=me
WebKit Commit Bot
Comment 3
2013-07-17 09:25:36 PDT
Comment on
attachment 206828
[details]
Naming convention fix. Clearing flags on attachment: 206828 Committed
r152784
: <
http://trac.webkit.org/changeset/152784
>
WebKit Commit Bot
Comment 4
2013-07-17 09:25:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug