Naming convention on createInvalidParamError is incorrect. https://bugs.webkit.org/show_bug.cgi?id=118756

Patch by Chris Curtis <chris_curtis@apple.com> on 2013-07-17
Reviewed by Geoffrey Garen.

Changed the naming of createInvalidParamError to createInvalidParameterError.
This corrects the naming convention for the function listed in the WebKit code styling.

* interpreter/Interpreter.cpp:
(JSC::loadVarargs):
* jit/JITStubs.cpp:
(JSC::DEFINE_STUB_FUNCTION):
* llint/LLIntSlowPaths.cpp:
(JSC::LLInt::LLINT_SLOW_PATH_DECL):
* runtime/CommonSlowPaths.h:
(JSC::CommonSlowPaths::opIn):
* runtime/ExceptionHelpers.cpp:
(JSC::createInvalidParameterError):
* runtime/ExceptionHelpers.h:
* runtime/JSObject.cpp:
(JSC::JSObject::hasInstance):

Canonical link: https://commits.webkit.org/136664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152784 268f45cc-cd09-0410-ab3c-d52691b4dbfc